syntax = "proto3";
option java_multiple_files = true;
package com.helphi.question.api.grpc;

message Answer {
    string answerText = 1;
    int32 answerScore = 2;
}

